--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,7 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer>
-	&copy; {currentYear} Jeanine White
-	<small class="byline">🚀 Built by Astro</small>
+	&copy; {currentYear} Daria Ree
 </footer>
 <style>
 	footer {
