--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Nav from '../components/Nav.astro';
 
 <html lang="en">
 	<head>
-		<MainHead title="About | Jeanine White" description="About Jeanine White Lorem Ipsum" />
+		<MainHead title="About | Daria Ree" description="About Daria Ree" />
 		<style>
 			.heroImg {
 				max-height: 24rem;
