--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ const featuredProject = projects[0]!;
 <html lang="en">
 	<head>
 		<MainHead
-			title="Jeanine White: Personal Site"
-			description="Jeanine White: Developer, Speaker, and Writer..."
+			title="Daria Ree: Personal Site"
+			description="Daria Ree: Developer, Musician, and Writer..."
 		/>
 		<style>
 			.wrapper {
@@ -198,29 +198,41 @@ const featuredProject = projects[0]!;
 				text-align: center;
 				margin-top: 2em;
 			}
+
+			.rick {
+				position: absolute;
+				top: 223px;
+				left: 700px;
+				z-index: 10;
+			}
+
+			.eye {
+				position: absolute;
+				z-index: 100;
+			}
 		</style>
 	</head>
 	<body>
 		<Nav />
 		<header class="hero">
-			<img
-				width="1600"
-				height="1131"
-				class="img"
-				src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75"
-				srcset="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75 800w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75 1200w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1600&q=75 1600w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=2400&q=75 2400w"
-				sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
-			/>
+			<img width="350" height="40" 
+			class="rick" id="rick" src="/assets/rick.png"/>
+			<div class="eyes">
+				<img width="18" height="40" class="eye" src="/assets/eye.png" style="top: 398px;
+    left: 810px;"/>
+				<img width="18" height="40" class="eye" src="/assets/eye.png" style="top: 391px;
+    left: 850px;"/>
+			</div>
 			<div class="gradient"></div>
 			<div class="gradient2"></div>
 			<div class="overlay">
 				<h1 class="title">
-					<small class="subtitle">The personal site of</small>Jeanine White
+					<small class="subtitle">Hi my name is</small>Daria Ree
 				</h1>
 				<div class="roles">
 					<span class="role">👩‍💻 Developer <span class="invert">👩‍💻 Developer</span></span>
-					<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>
-					<span class="role">✏️ Writer <span class="invert">✏️ Writer</span></span>
+					<span class="role">🎤 Musician <span class="invert">🎤 Musician</span></span>
+					<span class="role">✏️ Ecoactivist <span class="invert">✏️ Ecoactivist</span></span>
 				</div>
 				<p class="desc">Lover of dogs, roadtrips, and poetry.</p>
 			</div>
@@ -249,4 +261,34 @@ const featuredProject = projects[0]!;
 		</main>
 		<Footer />
 	</body>
+	<script>
+		document.addEventListener('mousemove', (e) => {
+			const mouseX = e.clientX
+			const mouseY = e.clientY
+
+			const rickImg = document.getElementById('rick')
+			const rekt = rickImg?.getBoundingClientRect()
+
+			const anchorX = rekt?.left + rekt?.width / 2
+			const anchorY = rekt?.top + rekt?.height / 2
+
+			// console.log(rickImg)
+			const angleDeg = angle(mouseX, mouseY, anchorX, anchorY)
+			console.log(angleDeg)
+
+			const eyes = document.querySelectorAll('.eye');
+			eyes.forEach(eye => {
+				eye.style.transform = `rotate(${90 + angleDeg}deg)`
+			})
+		})
+
+		function angle(cx, cy, ex, ey) {
+			const dy = ey - cy;
+			const dx = ex - cx;
+			const rad = Math.atan2(dy, dx);
+
+			const deg = rad * 180 / Math.PI;
+			return deg
+		}
+	</script>
 </html>
